Add a button to the MahfoodhFragment and implement code the required the permission of the user

--- a/LaythAssign33/src/main/res/layout/fragment_layth.xml
+++ b/LaythAssign33/src/main/res/layout/fragment_layth.xml
@@ -6,15 +6,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LaythFragment"
-    >
+    tools:context=".LaythFragment">
 
 
     <TextView
         android:id="@+id/LaythTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/frag1_text"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:text="@string/frag1_text" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="244dp"
+        android:src="@drawable/image" />
 </LinearLayout>
